--- a/views/layout.jade
+++ b/views/layout.jade
@@ -3,9 +3,11 @@ html
     head
         title= title
         link(rel='stylesheet', href='/bower_components/bootstrap/dist/css/bootstrap.min.css')
-        link(rel='stylesheet', href='/stylesheets/style.css')
+        link(rel='stylesheet', href='/css/style.css')
         script(type='text/javascript', src='/bower_components/jquery/dist/jquery.min.js')
         script(type='text/javascript', src='/bower_components/bootstrap/dist/js/bootstrap.min.js')
         script(type='text/javascript', src='/bower_components/react/react.min.js')
+        script(type='text/javascript', src='https://cdn.socket.io/socket.io-1.3.5.js')
+        script(type='text/javascript', src='https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js')
     body
         block content
