Add development-build gulp task, let's try dockerfiles.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,6 +4,8 @@ html
         title= title
         //- header:css
         //- endinject
+        //- bower:js
+        //- endbower
         //- header:js
         //- endinject
     body
