Various packaging fixes.

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,7 @@ html
         //- endinject
         //- bower:js
         //- endbower
+        script(src="/socket.io/socket.io.js")
         //- header:js
         //- endinject
     body
