Prod build script

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -6,6 +6,8 @@ html
         //- endinject
         //- bower:js
         //- endbower
+        //- bowerprod:js
+        //- endinject
         script(src="/socket.io/socket.io.js")
         //- header:js
         //- endinject
