--- a/public/css/style.css
+++ b/public/css/style.css
@@ -22,7 +22,7 @@ a {
     font-weight: bold;
     border: none;
     background-color: transparent;
-    margin: 0;
+    margin-left: 0.5em;
     font: normal normal normal 13.3333330154419px/normal Arial;
     text-rendering: auto;
     letter-spacing: normal;
